--- a/zipclient/index.html
+++ b/zipclient/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <script src="./index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 <head>
     <meta charset="UTF-8">
@@ -9,19 +8,24 @@
     <title>Info 344</title>
 </head>
 <body>
-    <form action="" id="inputName">
-        What is your name? <input type="text" name="name">
-    <input type="submit" value="Submit">
+    <form id="form" action="">
+        Name <input id="input-name" type="text" name="name">
+        <input type="submit" value="submit">
     </form>
     <p id="output"></p>
-    var name = document.createElement("INPUT")
-    name.setAttribute("")
-
+    <button id="memory">Check memory</button>
     <p>
     input to get the user's name
     send it to localhost:4000/hello?name=...</p>
     <p>
     every second, request localhost:4000/memory
     display Alloc field somewhere on the page</p>
+    <form id="city-form" action="">
+        City <input id="input-city" type="text" name="name">
+        <input type="submit" value="submit">
+    </form>
+
+    <p id="zip-output"></p>
+    <script src="./index.js"></script>
 </body>
 </html>
